--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@google/generative-ai": "^0.21.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.13.3",
